# backend/app/admin/service/cmd/server/wire_gen.go
@@ -32,10 +32,6 @@ func initApp(logger log.Logger, registrar registry.Registrar, bootstrap *v1.Boot
 	userRepo := data.NewUserRepo(dataData, logger)
 	authenticationService := service.NewAuthenticationService(logger, userRepo, userToken)
 	userService := service.NewUserService(logger, userRepo)
-	dictRepo := data.NewDictRepo(dataData, logger)
-	dictService := service.NewDictService(logger, dictRepo)
-	dictDetailRepo := data.NewDictDetailRepo(dataData, logger)
-	dictDetailService := service.NewDictDetailService(logger, dictDetailRepo)
 	menuRepo := data.NewMenuRepo(dataData, logger)
 	menuService := service.NewMenuService(menuRepo, logger)
 	routerService := service.NewRouterService(logger, menuRepo)
@@ -45,7 +41,7 @@ func initApp(logger log.Logger, registrar registry.Registrar, bootstrap *v1.Boot
 	roleService := service.NewRoleService(roleRepo, logger)
 	positionRepo := data.NewPositionRepo(dataData, logger)
 	positionService := service.NewPositionService(positionRepo, logger)
-	httpServer := server.NewRESTServer(bootstrap, logger, authenticator, engine, userToken, authenticationService, userService, dictService, dictDetailService, menuService, routerService, organizationService, roleService, positionService)
+	httpServer := server.NewRESTServer(bootstrap, logger, authenticator, engine, userToken, authenticationService, userService, menuService, routerService, organizationService, roleService, positionService)
 	app := newApp(logger, registrar, httpServer)
 	return app, func() {
 		cleanup()
